2008-10-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Cache.py:

	New module to store global temp stuff

	* pycvsanaly2/main.py:
	* pycvsanaly2/Config.py:
	* pycvsanaly2/Repository.py
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/SVNParser.py:
	* pycvsanaly2/GitParser.py:
	* pycvsanaly2/BzrParser.py:
	* pycvsanaly2/Database.py:
	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/extensions/CommitsLOC.py:

	Move added/removed lines per commit feature to a new extension,
	since it's only supported by CVS and it's a very heavy task to be
	carried out in the main parsing process for the repos that don't
	support it.
	
2008-10-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/Metrics.py:
	* pycvsanaly2/extensions/__init__.py:

	Pass the given uri to the extensions. It'll be needed for future
	extensions.
	
2008-10-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/GitParser.py:

	Ignore not merged local branches and stash branches. Unpack all
	branches when we find that the curent commit is the parent of such
	branches, instead of unpacking only the first one we find. Take
	into account also that the current commit can be both the last
	commit of a branch and the parent of another one.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Another approach for the incubator workaround since it seems the
	old one is not enough.
	
2008-10-14  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Log.py:

	Classes for handling reading and writing from/to logs

	* pycvsanaly2/Parser.py:
	* pycvsanaly2/ParserFactory.py:
	* pycvsanaly2/main.py:

	Change the way the parser is fed, the parser don't read the log