@@ -1,3 +1,10 @@
+2008-10-20  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/SVNParser.py:
+
+	Take into account that it's possible to find commits without any
+	modified path.
+	
 2008-10-15  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly2/Cache.py:
